--- a/css/styles.css
+++ b/css/styles.css
@@ -26,14 +26,50 @@ body {
 }
 h1, h2, h3 {font-family: var(--font-family);} 
 
+* {box-sizing: border-box;}
+
 /* --------------RESET DEFAULTS--------------- */
 a {
     text-decoration: none;
 }
+address {
+    font-style: normal;
+}
 ul, ol {
     list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
+p, h1, h2, h3, h4, h5, h6 { 
+    margin: 0;
+}
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
+
+/* ----------------COMMON STYLES---------------- */
+.container {
+    max-width: 1158px;
+    padding: 0 15px;
+    margin: 0 auto;
+}
+
 /* -------------HEADER------------------- */
+.page-header {
+    border-bottom: 1px solid var(--cornflower);
+}
+.header-container {
+    display: flex;
+    align-items: center;
+}
+.logo {
+    display: flex;
+    align-items: center;
+    padding: 24px 0;
+    margin-right: 76px;
+}
 .logo-web {font-family: var(--second-family);
     font-weight: 700;
     font-size: 18px;
@@ -52,28 +88,44 @@ ul, ol {
     text-transform: uppercase;
     color: var(--navy-blue);}
 
-.header-nav a {font-family: var(--font-family);
+.header-nav a:hover, .header-nav a:focus {color: var(--ocean);}
+.nav-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+.nav-link {
+    font-family: var(--font-family);
     font-weight: 500;
     font-size: 16px;
     /* line-height: 24px; */
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--navy-blue);}
-.header-nav a:hover, .header-nav a:focus {color: var(--ocean);}
-
-address {font-style: normal;}
-.contacts a{
+    color: var(--navy-blue);
+    padding: 24px 0;
+    display: block;
+}
+.contacts {
+    margin-left: auto;
+}
+.contacts-list {
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+.contacts-link {
 font-family: var(--font-family);
 /* line-height: 24px; */
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--slate);
+display: block;
+padding: 24px 0;
 }
-
 .contacts a:hover, .contacts a:focus {color: var(--ocean);}
 
 /* -------------BODY------------------- */
-body h2 {text-align: center ;}
+body h2 {text-align: center;}
 
 .hero-title {
     font-size: 56px;
@@ -83,8 +135,16 @@ body h2 {text-align: center ;}
     letter-spacing: 0.02em;
     text-align: center;
     color: var(--white);
+    max-width: 496px;
+    margin-bottom: 48px;
+    margin-left: auto;
+    margin-right: auto;
 }
-.hero-image {background-color: var(--navy-blue);}
+.hero-image {
+    background-color: var(--navy-blue);
+    padding-top: 188px;
+    padding-bottom: 188px;
+    }
 .hero-button {
     font-family: var(--font-family);
     font-weight: 500;
@@ -94,8 +154,15 @@ body h2 {text-align: center ;}
     color: var(--white);
     cursor: pointer;
     background-color: var(--iris);
+    display: block;
+    margin-top: 48px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 16px 32px;
 }
 .hero-button:hover, .hero-button:focus{background-color: var(--ocean);}
+
+.section {padding-top: 120px; padding-bottom: 120px;}
 
 .section-title {
     font-weight: 700;
@@ -103,6 +170,19 @@ body h2 {text-align: center ;}
     line-height: 1.11111;
     letter-spacing: 0.02em;
     color: var(--navy-blue);
+    margin-bottom: 72px;
+}
+.hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
 }
 .section-item {
     font-weight: 500;
@@ -110,6 +190,7 @@ body h2 {text-align: center ;}
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: var(--navy-blue);
+    margin-bottom: 8px;
 }
 .section-txt {
     font-size: 16px;
@@ -117,18 +198,57 @@ body h2 {text-align: center ;}
     letter-spacing: 0.02em;
     color: var(--slate);
 }
-
+.features-list {
+    display: flex;
+    gap: 24px;
+    width: calc(100% - 72px) / 4;
+}
+.features-item {
+    flex: 1;
+}
+.team-list {
+    display: flex;
+    gap: 24px;
+    width: calc(100% - 72px) / 4;
+}
+.team-card {
+    flex: 1;
+    border-radius: 0 0 4px 4px;
+}
 .team {background-color: var(--cloud) ;}
 .team li {background-color: var(--white);}
 .team h3 {text-align: center;}
-.team p { text-align: center;}
-
+.team p {text-align: center;}
+.team-wrapper {
+    padding: 32px 16px;
+}
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 48px;
+    column-gap: 24px;
+}
+.portfolio-item {
+    flex-basis: calc((100% - 48px) / 3);
+}
+.portfolio-wrapper {
+    padding: 32px 16px;
+    border: 1px solid var(--cornflower);
+    border-top: none
+}
 /* -------------FOOTER------------------- */
-footer {background-color: var(--navy-blue) ;}
+footer {background-color: var(--navy-blue);
+        padding: 100px 0;
+}
 footer .logo-studio {color: var(--cloud);}
 .footer-text {
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--cloud);}
+    color: var(--cloud);
+    max-width: 264px;
+}
+footer .logo {
+    margin-bottom: 16px;
+    }
