--- a/css/styles.css
+++ b/css/styles.css
@@ -126,7 +126,10 @@ padding: 24px 0;
 
 /* -------------BODY------------------- */
 body h2 {text-align: center;}
-
+.section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 .hero-title {
     font-size: 56px;
     font-weight: 700;
@@ -159,10 +162,9 @@ body h2 {text-align: center;}
     margin-left: auto;
     margin-right: auto;
     padding: 16px 32px;
+    border-radius: 4px;
 }
 .hero-button:hover, .hero-button:focus{background-color: var(--ocean);}
-
-.section {padding-top: 120px; padding-bottom: 120px;}
 
 .section-title {
     font-weight: 700;
@@ -172,7 +174,7 @@ body h2 {text-align: center;}
     color: var(--navy-blue);
     margin-bottom: 72px;
 }
-.hidden {
+.visually-hidden {
     position: absolute;
     width: 1px;
     height: 1px;
@@ -201,19 +203,19 @@ body h2 {text-align: center;}
 .features-list {
     display: flex;
     gap: 24px;
-    width: calc(100% - 72px) / 4;
 }
 .features-item {
     flex: 1;
+    width: calc((100% - 72px) / 4);
 }
 .team-list {
     display: flex;
     gap: 24px;
-    width: calc(100% - 72px) / 4;
 }
 .team-card {
     flex: 1;
     border-radius: 0 0 4px 4px;
+    width: calc((100% - 72px) / 4);
 }
 .team {background-color: var(--cloud) ;}
 .team li {background-color: var(--white);}
